[gd_scene load_steps=11 format=3 uid="uid://bg1r2rkbd021"]

[ext_resource type="Script" path="res://scenes/battle_unit/battle_unit.gd" id="1_664hq"]
[ext_resource type="Texture2D" uid="uid://ct4xk88g67xlv" path="res://assets/sprites/monsters.png" id="1_k0une"]
[ext_resource type="Script" path="res://components/skin.gd" id="2_4vo21"]
[ext_resource type="PackedScene" uid="uid://6t7poyqji4dh" path="res://scenes/health_bar/health_bar.tscn" id="3_vhjnk"]
[ext_resource type="PackedScene" uid="uid://r6i2ug5jon3k" path="res://scenes/mana_bar/mana_bar.tscn" id="4_03pgi"]
[ext_resource type="PackedScene" uid="uid://cuqct6gepc6dy" path="res://scenes/tier_icon/tier_icon.tscn" id="5_8ow3a"]
[ext_resource type="Script" path="res://components/finite_state_machine.gd" id="7_e7yjp"]
[ext_resource type="Script" path="res://components/target_finder.gd" id="7_xsykw"]
[ext_resource type="Script" path="res://components/unit_ai.gd" id="8_2mupp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6qoms"]
size = Vector2(36, 36)

[node name="BattleUnit" type="Area2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_664hq")

[node name="CustomSkin" type="Sprite2D" parent="."]
position = Vector2(16, 8)
texture = ExtResource("1_k0une")
region_enabled = true
region_rect = Rect2(128, 128, 32, 32)
script = ExtResource("2_4vo21")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(16, 8)
shape = SubResource("RectangleShape2D_6qoms")

[node name="HealthBar" parent="." instance=ExtResource("3_vhjnk")]

[node name="ManaBar" parent="." instance=ExtResource("4_03pgi")]

[node name="TierIcon" parent="." instance=ExtResource("5_8ow3a")]
offset_top = -13.0
offset_right = 10.0
offset_bottom = -3.0

[node name="FSMDebug" type="Label" parent="."]
offset_left = -28.0
offset_top = -39.0
offset_right = 61.0
offset_bottom = -21.0
horizontal_alignment = 1

[node name="TargetFinder" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("7_xsykw")
actor = NodePath("..")

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("debug_label")]
script = ExtResource("7_e7yjp")
debug_label = NodePath("../FSMDebug")

[node name="UnitAI" type="Node" parent="." node_paths=PackedStringArray("actor", "fsm", "target_finder")]
script = ExtResource("8_2mupp")
actor = NodePath("..")
fsm = NodePath("../FiniteStateMachine")
target_finder = NodePath("../TargetFinder")
